applications/netbird/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-dashboard
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: netbird
      app.kubernetes.io/name: netbird-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: netbird
        app.kubernetes.io/name: netbird-dashboard
    spec:
      serviceAccountName: netbird
      containers:
        - name: netbird-dashboard
          image: netbirdio/dashboard:v2.92.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-server
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: netbird
      app.kubernetes.io/name: netbird-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: netbird
        app.kubernetes.io/name: netbird-server
    spec:
      serviceAccountName: netbird
      containers:
        - name: netbird-server
          image: netbirdio/netbird-server:0.78.1
          imagePullPolicy: IfNotPresent
          args:
            - --config
            - /etc/netbird/config.yaml
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: management
              containerPort: 33073
              protocol: TCP
            - name: signal
              containerPort: 10000
              protocol: TCP
            - name: relay
              containerPort: 33080
              protocol: TCP
            - name: stun
              containerPort: 3478
              protocol: UDP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /etc/netbird/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: data
              mountPath: /var/lib/netbird
      volumes:
        - name: config
          emptyDir: {}
        - name: config-tmpl
          configMap:
            name: netbird-server-config
        - name: netbird-secrets
          secret:
            secretName: netbird
        - name: data
          persistentVolumeClaim:
            claimName: netbird-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-reverse-proxy
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: netbird
      app.kubernetes.io/name: netbird-reverse-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: netbird
        app.kubernetes.io/name: netbird-reverse-proxy
    spec:
      containers:
        - name: reverse-proxy
          image: netbirdio/reverse-proxy:0.78.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: 8443tcp
              containerPort: 8443
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: certs
              mountPath: /certs
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: netbird-reverse-proxy-tls
