applications/netbird/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbird-dashboard
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-dashboard
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-reverse-proxy
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-reverse-proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-reverse-proxy
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-server
  labels:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/name: netbird-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
      appProtocol: kubernetes.io/h2c
    - name: websocket
      port: 81
      protocol: TCP
      targetPort: 80
      appProtocol: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
      appProtocol: kubernetes.io/h2c
    - name: management
      port: 33073
      protocol: TCP
      targetPort: 33073
      appProtocol: kubernetes.io/h2c
    - name: signal
      port: 10000
      protocol: TCP
      targetPort: 10000
      appProtocol: kubernetes.io/h2c
    - name: relay
      port: 33080
      protocol: TCP
      targetPort: 33080
    - name: stun
      port: 3478
      protocol: UDP
      targetPort: 3478
